k8s/apps/paperless-ngx/overlays/prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - docs.tdude.co
    secretName: docs-tdude-co-tls
  rules:
    - host: docs.tdude.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx
                port:
                  name: http
